Create aggregate pipeline huoo role object which groups together pipelines which exactly share organisation roles